src/objects/Issue__c.object
<CustomObject>
    <description>The object for tracking issues/defects.</description>
    <fields>
        <fullName>Build_Version__c</fullName>
        <description>Item is planned for release in this build.</description>
        <inlineHelpText>Item is planned for release in this build.</inlineHelpText>
        <label>Build/Version</label>
        <picklist>
            <picklistValues>
                <fullName>Hot Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <description>This field captures the functional area impacted by this issue.</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Book Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production - Editorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production - Galley Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production - Marketing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production - MDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production - PSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production - Cover Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X - Data Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X - Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X - Web Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cost_to_implement__c</fullName>
        <description>Cost</description>
        <inlineHelpText>Enter cost in $</inlineHelpText>
        <label>Cost to implement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description/Use Case</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Note__c</fullName>
        <description>Developer notes regarding the issue, dependencies, etc</description>
        <inlineHelpText>Developer notes regarding the issue, dependencies, etc</inlineHelpText>
        <label>Developer Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Completion__c</fullName>
        <description>The expected development completion date.</description>
        <inlineHelpText>The expected development completion date.</inlineHelpText>
        <label>Expected Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Comments__c</fullName>
        <inlineHelpText>Enter additional info or click icon to insert an image (1MB limit)</inlineHelpText>
        <label>Issue Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issue_Number__c</fullName>
        <description>Unique identifier for an issue</description>
        <displayFormat>I-{0000}</displayFormat>
        <inlineHelpText>Unique identifier for an issue</inlineHelpText>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Migration_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is migration template impacted by the resolution.</description>
        <label>Migration Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent_paid_by_bakesale__c</fullName>
        <label>Percent paid by bakesale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Required: Must have for Go Live
Workaround: Manual workaround possible
Non Critical: Can wait post Go Live</description>
        <inlineHelpText>Required: Must have for Go Live
Workaround: Manual workaround possible
Non Critical: Can wait post Go Live</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Critcal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <formula>Projects__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Requester</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Note__c</fullName>
        <description>Description of the solution</description>
        <inlineHelpText>Description of the solution</inlineHelpText>
        <label>Resolution Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Type__c</fullName>
        <label>Resolution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Config</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Go-Live (Phase II)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Data Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Object__c</fullName>
        <label>Salesforce Object</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note &amp; Attachment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_URL__c</fullName>
        <description>URL of page or the SFDC record where the error occred.</description>
        <inlineHelpText>Enter the Salesforce URL where you encountered the error.</inlineHelpText>
        <label>Salesforce URL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>How severe is the defect?</description>
        <inlineHelpText>How severe is the defect?</inlineHelpText>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Held for Phase II</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task List</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unfunded_Amount__c</fullName>
        <formula>Cost_to_implement__c  *  Percent_paid_by_bakesale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unfunded Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assignee</description>
        <inlineHelpText>Assignee</inlineHelpText>
        <label>Assigned To 2:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Implementer2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assignee</description>
        <inlineHelpText>Assignee</inlineHelpText>
        <label>Assigned To 3:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assignee</description>
        <inlineHelpText>Assignee</inlineHelpText>
        <label>Assigned To 4:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Issue</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>